Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8042250

Misleading command line output for ReservedCodeCacheSize validation

XMLWordPrintable

    • b01
    • x86
    • linux_redhat_6.0

        A DESCRIPTION OF THE PROBLEM :
        $ cat Main.java
        public class Main{
        public static void main(String ar[]){
        System.out.println("Hello world");
        }
        }


        $ java -version
        java version "1.7.0_45"
        Java(TM) SE Runtime Environment (build 1.7.0_45-b18)
        Java HotSpot(TM) 64-Bit Server VM (build 24.45-b08, mixed mode)


        $ javac Main.java

        $ java -XX:ReservedCodeCacheSize=2495K Main
        Invalid maximum code cache size: -XX:ReservedCodeCacheSize=2495K. Should be greater than InitialCodeCacheSize=2496K
        Error: Could not create the Java Virtual Machine.
        Error: A fatal exception has occurred. Program will exit.




        $ java -XX:ReservedCodeCacheSize=2496K Main
        Hello world




        EXPECTED VERSUS ACTUAL BEHAVIOR :
        EXPECTED -
        error message should say greater than or equal to InitialCodeCacheSize=2496K
        ACTUAL -
        Should be greater than InitialCodeCacheSize=2496K

        URL OF FAULTY DOCUMENTATION :
        it is code doc

              thartmann Tobias Hartmann
              webbuggrp Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: