8042250: Misleading command line output for ReservedCodeCacheSize validation Reviewed-by: kvn